# embedded-cpp-rtos

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  MISRA_CLEANUP_NOTES.md  README.md  RTOS_INTEGRATION.md  build_and_lint.bat  lint_cmacros.h  lint_results.txt  run_clang_tidy_cpp.bat  run_cppcheck.bat  run_cppcheck_misra_c.bat  run_cppcheck_strict.bat  suppressions.lnt  yeniprgram2.uvprojx
.github/workflows/: firmware-ci.yml
App/Inc/: Application.hpp  ConfigManager.hpp  main.hpp
App/Src/: Application.cpp  ConfigManager.cpp  main.cpp
Common/Inc/: MedianFilter.hpp
Common/Src/: syscalls.c
Config/Inc/: Config_Manager.h  FreeRTOSConfig.h  appcons.h  sensortypes.h
Config/Src/: config_manager.c
Drivers/Inc/: DelayTimer.hpp  I2cBus.hpp  LcdDisplay.hpp  PwmOutput.hpp  Sht3xSensor.hpp  SpiBus.hpp  SystemClock.hpp  UartDriver.hpp
Drivers/Src/: DelayTimer.cpp  PwmOutput.cpp  Sht3xSensor.cpp  SpiBus.cpp
Legacy/Inc/: modbus_rtu.h
Legacy/Src/: filter.cpp  flash_write.cpp  i2c.cpp  interrupts.cpp  sysclock.cpp  uart.cpp
Lint/include/: cstddef  cstdint  stdint.h
Project/: STM32F410RBTx_FLASH.ld  stm32f410.ld
RTE/Device/STM32F410RBTx/: startup_stm32f410rx_gcc.s
Rtos/Inc/: RtosConfig.hpp  RtosTaskManager.hpp
Rtos/Src/: RtosHooks.c  RtosTaskManager.cpp
Services/Inc/: AdcService.hpp  ErrorManager.hpp  FlashStorage.hpp  ModbusService.hpp  SensorService.hpp  WatchdogService.hpp
Services/Src/: AdcService.cpp  ErrorManager.cpp  FlashStorage.cpp  ModbusService.cpp  SensorService.cpp  WatchdogService.cpp
Tests/: CMakeLists.txt  test_config_manager.cpp  test_error_manager.cpp  test_median_filter.cpp  test_sht3x_conversion.cpp
cmake/: gcc-arm-none-eabi.cmake
docs/: requirements.md
reports/: clang_tidy_cpp_report.txt
scripts/: check_stack_usage.py
